<resources>
    <string name="app_name">Вне очереди</string>
    <string name="address">Введите адрес</string>
    <string name="location">Location</string>
    <string name="button_buy">Купить</string>
    <string name="category_vegetables">Овощи</string>
    <string name="category_milk">Молоко</string>
    <string name="category_meat">Мясо</string>
    <string name="category_fish">Рыба</string>
    <string name="category_water">Вода</string>
    <string name="category_tea">Чай</string>
    <string name="category_7">Макароны</string>
    <string name="category_8">Соусы</string>
    <string name="category_bread">Хлеб</string>
    <string name="category_sweet">Сладости</string>
    <string name="category_health">Здоровое питание</string>
    <string name="category_12">Замороженные продукты</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="basket">Basket</string>
    <string name="order">Заказать</string>
    <string name="price">1252,9 р</string>
    <string name="name_product_basket">Сыр Ламбер Голландский 45% 180г</string>
    <string name="number">1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Вход</string>
    <string name="register_text">Регистрация</string>
    <string name="login_text_hint">Логин</string>
    <string name="login_name_hint">Имя</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_confirm_hint">Повтор пароля</string>
    <string name="login_mail_hint">E-mail</string>
    <string name="user_username">Имя:</string>
    <string name="user_mail">E-mail:</string>
    <string name="user_phone">Телефон:</string>
    <string name="user_logout">Выйти</string>
    <string name="street">Улица</string>
    <string name="apartment">Квартира</string>
    <string name="floor">Этаж</string>
    <string name="entrance">Подъезд</string>
    <string name="comment">Комментарий</string>
    <string name="ready">Готово</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search">Найти покушать</string>
    <string name="main_username">Привет, друг</string>
    <string name="main_welcome">Мы рады, что ты вернулся</string>
    <string name="find_text1">Найди все</string>
    <string name="find_text2">что тебе нужно</string>
    <string name="stock">Акции</string>
    <string name="catalog">Каталог</string>
    <string name="price_stock">70 р</string>
    <string name="count_product">2 шт</string>
    <string name="to_basket">В корзину</string>
    <string name="total">Итого</string>
    <string name="go_basket_footer">Перейти в корзину</string>
    <string name="clear_basket">Очистить корзину</string>
    <string name="promo">Промокод</string>
    <string name="delivery">Доставка</string>
    <string name="arrange">Оформить заказ</string>
    <string name="pay">Оплатить заказ</string>
    <string name="sum">Сумма заказа</string>
    <string name="delivery_price">0 руб</string>
    <string name="username">Константин</string>
    <string name="user_number">+7 904 707 14 88</string>
    <string name="contact_us">Связаться с нами</string>
    <string name="orders">Заказы</string>
    <string name="addresses">Адреса</string>
    <string name="settings">Настройки</string>
    <string name="singIn">Вход</string>
    <string name="singIn_button">Войти</string>
    <string name="singUp">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="phone_hint">+7</string>
    <string name="basket_string">Корзина</string>
    <string name="delivery_string">Адрес доставки</string>
    <string name="map">Карта</string>

    <string name="image_descriptor">Product_img</string>
    <string name="logo">Logo</string>
    <string name="find">Find</string>
    <string name="vne">ВНЕ</string>
    <string name="ocheredi">ОЧЕРЕДИ</string>
</resources>