<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HeaderFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/top_login_box"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="-25dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#FAFAFA"
        app:cardCornerRadius="30dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/main_yellow"
        app:strokeWidth="0.8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="64dp"
                android:contentDescription="@string/logo"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/header_ava"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="58dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_ava" />

            <TextView
                android:id="@+id/welcome_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/main_username"
                android:textColor="@color/main_violet"
                android:textSize="22sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/rubik"
                android:text="@string/main_welcome"
                android:textColor="@color/main_violet"
                android:textSize="13sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/welcome_username"
                app:layout_constraintTop_toBottomOf="@+id/welcome_username" />

            <TextView
                android:id="@+id/find_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/find_text1"
                android:textColor="@color/main_violet"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo" />

            <TextView
                android:id="@+id/find_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-64dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/find_text2"
                android:textColor="@color/main_violet"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/find_text1"
                app:layout_constraintTop_toBottomOf="@+id/find_text1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/search_box"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/search_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/find"
                        android:padding="8dp"
                        app:srcCompat="@drawable/ic_search" />

                    <EditText
                        android:id="@+id/search_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="@font/rubik_bold"
                        android:hint="@string/search"
                        android:inputType="textPersonName"
                        android:padding="4dp"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>