<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/signIn_button"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/main_violet"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/password_login_box"
            app:layout_constraintStart_toStartOf="@+id/password_login_box"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/singIn_button"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_logo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            app:srcCompat="@drawable/ic_login_line" />

        <ImageView
            android:id="@+id/login_skin_line"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password"
            app:layout_constraintStart_toStartOf="@+id/forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/password_login_box"
            app:srcCompat="@drawable/ic_login_skin_line" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/singIn"
            android:textColor="@color/main_violet"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_logo" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/singUp"
            android:textColor="@color/main_violet"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_logo"
            app:layout_constraintStart_toEndOf="@id/signIn"
            app:layout_constraintTop_toTopOf="@+id/login_logo" />

        <TextView
            android:id="@+id/phone_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/user_phone"
            android:textColor="@color/main_violet"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" />

        <TextView
            android:id="@+id/password_login_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/login_password_hint"
            android:textColor="@color/main_violet"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@+id/phone_login_box" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik"
            android:text="@string/forgot_password"
            android:textColor="@color/main_violet"
            app:layout_constraintEnd_toEndOf="@+id/signIn_button"
            app:layout_constraintStart_toStartOf="@+id/signIn_button"
            app:layout_constraintTop_toBottomOf="@+id/login_skin_line" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/phone_login_box"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/login_logo"
            app:layout_constraintStart_toStartOf="@+id/phone_login_label"
            app:layout_constraintTop_toBottomOf="@+id/phone_login_label"
            app:strokeColor="@color/main_violet"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/form_login_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:inputType="phone"
                android:text="@string/phone_hint" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/password_login_box"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/login_logo"
            app:layout_constraintStart_toStartOf="@+id/phone_login_label"
            app:layout_constraintTop_toBottomOf="@+id/password_login_label"
            app:strokeColor="@color/main_violet"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/form_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:inputType="textPassword" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>