<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AccountActivity">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="wrap_content"
      android:layout_height="450dp"
      android:layout_marginStart="-150dp"
      android:layout_marginBottom="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/ic_ellipse2" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_ava" />

  <TextView
      android:id="@+id/account_username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/username"
      android:fontFamily="@font/rubik_bold"
      android:textColor="@color/main_violet"
      android:textSize="28sp"
      app:layout_constraintStart_toStartOf="@+id/imageView3"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <TextView
      android:id="@+id/account_user_number"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/user_number"
      android:fontFamily="@font/rubik"
      android:textColor="@color/main_violet"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="@+id/account_username"
      app:layout_constraintTop_toBottomOf="@+id/account_username" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="250dp"
      android:layout_height="1.7dp"
      android:layout_marginTop="4dp"
      app:layout_constraintStart_toStartOf="@+id/account_user_number"
      app:layout_constraintTop_toBottomOf="@+id/account_user_number"
      app:srcCompat="@drawable/ic_basket_line" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="-220dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_ellipse1" />

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/ic_logo" />

  <androidx.cardview.widget.CardView
      android:layout_width="325dp"
      android:layout_height="40dp"
      android:layout_marginBottom="32dp"
      app:cardCornerRadius="25dp"
      app:cardElevation="3dp"
      app:layout_constraintBottom_toTopOf="@+id/imageView6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/contact_us"
        android:textColor="@color/main_violet"
        android:textSize="16sp" />
  </androidx.cardview.widget.CardView>

  <TextView
      android:id="@+id/orders_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:fontFamily="@font/rubik_medium"
      android:text="@string/orders"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/account_username"
      app:layout_constraintTop_toTopOf="@+id/imageView2" />

  <ImageView
      android:id="@+id/orders_arror"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBottom_toBottomOf="@+id/orders_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/orders_text"
      app:srcCompat="@drawable/ic_arror_right" />

  <ImageView
      android:id="@+id/orders_line"
      android:layout_width="340dp"
      android:layout_height="3dp"
      android:layout_marginStart="-4dp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="@+id/orders_arror"
      app:layout_constraintStart_toStartOf="@+id/orders_text"
      app:layout_constraintTop_toBottomOf="@+id/orders_text"
      app:srcCompat="@drawable/ic_account_line" />

  <TextView
      android:id="@+id/addresses_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:fontFamily="@font/rubik_medium"
      android:text="@string/addresses"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/account_username"
      app:layout_constraintTop_toTopOf="@+id/orders_line" />

  <ImageView
      android:id="@+id/addresses_arror"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBottom_toBottomOf="@+id/addresses_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/addresses_text"
      app:srcCompat="@drawable/ic_arror_right" />

  <ImageView
      android:id="@+id/addresses_line"
      android:layout_width="340dp"
      android:layout_height="3dp"
      android:layout_marginStart="-4dp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="@+id/addresses_arror"
      app:layout_constraintStart_toStartOf="@+id/addresses_text"
      app:layout_constraintTop_toBottomOf="@+id/addresses_text"
      app:srcCompat="@drawable/ic_account_line" />

  <TextView
      android:id="@+id/settings_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:fontFamily="@font/rubik_medium"
      android:text="@string/settings"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/account_username"
      app:layout_constraintTop_toTopOf="@+id/addresses_line" />

  <ImageView
      android:id="@+id/settings_arror"
      android:layout_width="20dp"
      android:layout_height="20dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintBottom_toBottomOf="@+id/settings_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/settings_text"
      app:srcCompat="@drawable/ic_arror_right" />

  <ImageView
      android:id="@+id/settings_line"
      android:layout_width="340dp"
      android:layout_height="3dp"
      android:layout_marginStart="-4dp"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="@+id/settings_arror"
      app:layout_constraintStart_toStartOf="@+id/settings_text"
      app:layout_constraintTop_toBottomOf="@+id/settings_text"
      app:srcCompat="@drawable/ic_account_line" />

</androidx.constraintlayout.widget.ConstraintLayout>